<resources>
    <string name="app_name">Home_work7_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="name_of_family">Name of family</string>
    <string name="name_of_mother">Name of mother</string>
    <string name="name_of_father">Name of father</string>
</resources>